<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/banner"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/banner_msg"
       android:textAlignment="center"
       android:textSize="50sp"
       android:textStyle="bold"
       android:fontFamily="sans-serif-black"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       android:gravity="center_horizontal"
       android:layout_marginTop="10dp"
       />

    <TextView
        android:id="@+id/banner_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/banner_des"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"/>

    <EditText
        android:id="@+id/loginmailinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailhint"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toBottomOf="@id/banner_des"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="40sp"
        />

    <EditText
        android:id="@+id/loginpassinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordhint"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toBottomOf="@id/loginmailinput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="40sp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        app:layout_constraintTop_toBottomOf="@id/loginpassinput"
        android:fontFamily="sans-serif-black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="40sp"
        />
    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        app:layout_constraintTop_toBottomOf="@id/loginbutton"
        android:fontFamily="sans-serif-black"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="30sp"
        />

    <TextView
        android:id="@+id/registernow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/loginbutton"
        app:layout_constraintRight_toRightOf="@+id/loginbutton"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="40sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>