<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search">

  <TextView
      android:id="@+id/banner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:fontFamily="sans-serif-black"
      android:gravity="center_horizontal"
      android:text="@string/banner_msg"
      android:textAlignment="center"
      android:textSize="40sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/banner_des"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8sp"
      android:fontFamily="sans-serif-black"
      android:gravity="center_horizontal"
      android:text="@string/banner_des"
      android:textAlignment="center"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/banner" />

  <Button
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:text="@string/search_module"
      android:textSize="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="336dp"
      android:layout_height="64dp"
      android:layout_marginTop="148dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/banner_des"
      app:srcCompat="@drawable/searchbox"/>
</androidx.constraintlayout.widget.ConstraintLayout>